# ChinesePhoneticIndex

./: CMakeLists.txt  Readme.md  process_data.py
output/: ChPhoneticIndex.ann  ChPhoneticIndex.dsl  FrequencyTable.md  PinyinTable.md  Statistics.md
